fix stretching on mobile devices

--- a/src/app/componets/working-period/working-period.scss
+++ b/src/app/componets/working-period/working-period.scss
@@ -24,9 +24,10 @@
   //background: #EEE;
   //padding: 5px 10px;
   margin-bottom: 10px;
+  max-width: 100%;
   skill-ref {
-    //margin: 0 2px;
     white-space: nowrap;
+    display: inline-block;
 
     &:after {
       display: inline-block;
